permissions and limitations under the License.

ReservesDirect is located at:
http://www.reservesdirect.org/

************************************************************************
Revision 2.6.7

Changes
--  Corrections to the note section for add/edit item to work with Chrome and IE browsers.
--  Add more terms to the terms table.

Revision 2.6.6

Changes
--  Fixed the note section for add/edit item to work with Chrome and IE browsers.
    
Revision 2.6.5

Changes
--  Update the copyright queue query to handle null ISBN values. 
--  Restore the pages/times metadata to the course listings page. 
--  Remove carriage return found in the reserve notes in reserveList.php script 
    that create an rss feed for blackboard.

Note: Revisions 2.6.2 thru 2.6.4 were Emory specific migrations that are
    defined in the rd_registrar_scripts repository.
    
Revision 2.6.0

Changes
--  The opus feed file tranfer is validated using a new summary file that 
    contains the row count of the import files, so that project owners can 
    be informed about a failure.

--  Any reserves direct user can access their course when the course is in 
    the current semester or in a future semester but within its start and end dates.

--  An admin/staff/instructor can manually set a course to override the 
    opus import, so that their manual settings will not be overridden 
    with the registrar import data.

--  An admin/staff/instructor can manually create a crosslisted course, 
    and preserve that crosslisting during the import opus feed process, 
    so that their manual settings will not be overridden with the registrar 
    crosslisting setting.

--  All users will be able to see the correct student enrollment for the 
    current and next semester so that new students can access their reserves 
    material for a course.

Release 2.5.8
    This version was never deployed.  It is included in the 2.6.0 deployment.